# nut-test-pad

./: .gitignore  CMakeLists.txt  Nut2_global.h  db.cpp  db.h  main.cpp  nut-pad.pro  nut2.cpp  nut2.h  parenttable.cpp  parenttable.h  sampletable.cpp  sampletable.h  simplegenerator.cpp  simplegenerator.h
autotests/basic/: CMakeLists.txt  basic.cpp  basic.h  db.cpp  db.h  parenttable.cpp  post.cpp  post.h  sampletable.cpp  sampletable.h  user.cpp  user.h
installer/: build.py  data.json  file.py  msg.py
installer/assets/: Perticon.sh  config.xml  installscript.qs  package.xml
nut/: abstracttable.cpp  abstracttable.h  database.cpp  database.h  dataset.cpp  dataset.h  field2.cpp  field2.h  foreignkey.h  global.h  namedtype.h  nut.pri  phrase.cpp  phrase.h  query.cpp  query.h  table.cpp  table.h
nut/core/: fieldbase.cpp  fieldbase.h  sqlserializer.cpp  sqlserializer.h  tablebase.cpp  tablebase.h
nut/design/: field.h
nut/expressions/: conditionalexpression.cpp  expressiondata.h
nut/generators/: abstractsqlgenerator.cpp  abstractsqlgenerator.h  sqlitegenerator.cpp  sqlitegenerator.h
nut/models/: fieldmodel.cpp  fieldmodel.h  foreignkeymodel.cpp  foreignkeymodel.h  modelstorage.h
nut/phrases/: abstractfieldphrase.cpp  abstractfieldphrase.h  assignmentphrase.cpp  assignmentphrase.h  assignmentphraselist.cpp  assignmentphraselist.h  conditionalphrase.cpp  conditionalphrase.h  fieldphrase.h  fieldphrase_bool.h  fieldphrase_date.cpp  fieldphrase_date.h  fieldphrase_numeric.cpp  fieldphrase_numeric.h  fieldphrase_qstring.cpp  fieldphrase_qstring.h  phrasedata.cpp  phrasedata.h  phrasedatalist.cpp  (+3 more)
src/: CMakeLists.txt  abstracttable.cpp  abstracttable.h  childdataset.cpp  childdataset.h  database.h  dataset.cpp  dataset.h  field2.cpp  field2.h  foreignkey.cpp  foreignkey.h  global.h  namedtype.cpp  namedtype.h  phrase.h  query.cpp  query.h  querydata.h  table.cpp  table.h
src/core/: changelogtable.cpp  changelogtable.h  datasetbase.cpp  datasetbase.h  fieldbase.h  globalstorage.cpp  globalstorage.h  sqlserializer.cpp  sqlserializer.h  tablebase.cpp  tablesetcontainer.cpp  tablesetcontainer.h  typehelper.h
src/database/: databasebase.cpp  databasebase.h  databasedata.cpp  databasedata.h  databasemigratestorage.cpp  databasemigratestorage.h  databasemodel.cpp  databasemodel.h
src/expressions/: conditionalexpression.h  expressiondata.cpp
src/generators/: abstractsqlgenerator.cpp  abstractsqlgenerator.h  sqlitegenerator.cpp  sqlitegenerator.h
src/models/: foreignkeymodel.cpp  foreignkeymodel.h  modelstorage.cpp
src/phrases/: abstractfieldphrase.cpp  abstractfieldphrase.h  assignmentphrase.cpp  assignmentphrase.h  assignmentphraselist.h  conditionalphrase.h  fieldphrase.cpp  fieldphrase.h  fieldphrase_bool.cpp  fieldphrase_bool.h  fieldphrase_date.cpp  fieldphrase_date.h  fieldphrase_numeric.cpp  fieldphrase_numeric.h  fieldphrase_qstring.h  phrasedata.cpp  phrasedata.h  phrasedatalist.cpp  phrasedatalist.h  phraselist.cpp  phraselist.h  phrases.pri
src/runtimecheckers/: foreignkeychecker.cpp  foreignkeychecker.h  tablechecker.h
(+6 files in other folders)
